--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "recharts": "^3.0.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
